Build a Portfolio Site

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -7,6 +7,8 @@
         <title>Mostafa Elsheikh</title>
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <!-- Icon -->
+        <link rel="shortcut icon" type="image/png" href="images/icon.png">        
         <!-- Bootstrap CSS -->
         <!-- build:css css/main.css -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -21,10 +23,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="title-logo" src="images/logo.png" alt="Udacity logo">
+                        <img class="title-logo" src="images/logo.png" alt="Mostafa Elsheikh">
                     </div>
                     <div class="col-md-8 text-right text-uppercase">
-                        <h1 class="title-super text-thin">Mostafa Elsheikh</h1>
+                        <h1 class="title-super text-thin ">Mostafa Elsheikh</h1>
                         <h4>Software Developer</h4>
                     </div>
                 </div>
