--- a/Project 1/fresh_potatoes.html
+++ b/Project 1/fresh_potatoes.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Fresh Tomatoes!</title>
+    <title>Fresh Potatoes!</title>
 
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
@@ -101,7 +101,7 @@
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Fresh Tomatoes Movie Trailers</a>
+            <a class="navbar-brand" href="#">Fresh Potatoes Movie Trailers</a>
           </div>
         </div>
       </div>
@@ -109,32 +109,32 @@
     <div class="container">
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="ue80QwXMRHg" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjMyNDkzMzI1OF5BMl5BanBnXkFtZTgwODcxODg5MjI@._V1_SY1000_CR0,0,674,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="top" title="Imprisoned, the mighty Thor finds himselfin a lethal gladiatorial contest against the Hulk,his former ally. Thor must fight for survivaland race against time to prevent the all-powerful Helafrom destroying his home and the Asgardian civilization.">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjMyNDkzMzI1OF5BMl5BanBnXkFtZTgwODcxODg5MjI@._V1_SY1000_CR0,0,674,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="bottom" title="Imprisoned, the mighty Thor finds himselfin a lethal gladiatorial contest against the Hulk,his former ally. Thor must fight for survivaland race against time to prevent the all-powerful Helafrom destroying his home and the Asgardian civilization.">
     <h2>Thor: Ragnarok</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="vPP6aIw1vgY" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNmRiZDM4ZmMtOTVjMi00YTNlLTkyNjMtMjI2OTAxNjgwMWM1XkEyXkFqcGdeQXVyMjMxOTE0ODA@._V1_SY1000_CR0,0,648,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="top" title="Bodies are turning up around the city, each having met a uniquely gruesome demise. As the investigation proceeds, evidence points to one suspect: John Kramer, the man known as Jigsaw, who has been dead for ten years.">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNmRiZDM4ZmMtOTVjMi00YTNlLTkyNjMtMjI2OTAxNjgwMWM1XkEyXkFqcGdeQXVyMjMxOTE0ODA@._V1_SY1000_CR0,0,648,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="bottom" title="Bodies are turning up around the city, each having met a uniquely gruesome demise. As the investigation proceeds, evidence points to one suspect: John Kramer, the man known as Jigsaw, who has been dead for ten years.">
     <h2>Jigsaw</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="gCcx85zbxz4" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNzA1Njg4NzYxOV5BMl5BanBnXkFtZTgwODk5NjU3MzI@._V1_SY1000_CR0,0,674,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="top" title="A young blade runner's discovery of a long-buried secret leads himto track down former blade runner Rick Deckard,who's been missing for thirty years.">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNzA1Njg4NzYxOV5BMl5BanBnXkFtZTgwODk5NjU3MzI@._V1_SY1000_CR0,0,674,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="bottom" title="A young blade runner's discovery of a long-buried secret leads himto track down former blade runner Rick Deckard,who's been missing for thirty years.">
     <h2>Blade Runner 2049</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="EE_GY6zccqc" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTY5ODc5OTc2M15BMl5BanBnXkFtZTgwNjM0NjIzMzI@._V1_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="top" title="Based on the true story of the Granite Mountain Hotshots,a group of elite firefighters risk everythingto protect a town from a historic wildfire.">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTY5ODc5OTc2M15BMl5BanBnXkFtZTgwNjM0NjIzMzI@._V1_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="bottom" title="Based on the true story of the Granite Mountain Hotshots,a group of elite firefighters risk everythingto protect a town from a historic wildfire.">
     <h2>Only the Brave</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="33iuQu3UtjI" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BM2RlMjcyMGQtZTU3OC00NGRlLWExMGEtYjU3ZjUyMDc0NWZmXkEyXkFqcGdeQXVyNTI4MzE4MDU@._V1_SY1000_SX675_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="top" title="A humble businessman with a buried past seeks justicewhen his daughter is killed in an act of terrorism.A cat-and-mouse conflict ensues with a government official,whose past may hold clues to the killers' identities.">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BM2RlMjcyMGQtZTU3OC00NGRlLWExMGEtYjU3ZjUyMDc0NWZmXkEyXkFqcGdeQXVyNTI4MzE4MDU@._V1_SY1000_SX675_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="bottom" title="A humble businessman with a buried past seeks justicewhen his daughter is killed in an act of terrorism.A cat-and-mouse conflict ensues with a government official,whose past may hold clues to the killers' identities.">
     <h2>The Foreigner</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="hAUTdjf9rko" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BOTE0NWEyNDYtYWI5MC00MWY0LTg1NDctZjAwMjkyMWJiNzk1XkEyXkFqcGdeQXVyNjk5NDA3OTk@._V1_SY1000_CR0,0,674,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="top" title="A group of bullied kids band together when a shapeshifting demon, taking the appearance of a clown, begins hunting children.">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BOTE0NWEyNDYtYWI5MC00MWY0LTg1NDctZjAwMjkyMWJiNzk1XkEyXkFqcGdeQXVyNjk5NDA3OTk@._V1_SY1000_CR0,0,674,1000_AL_.jpg" width="220" height="342" data-toggle="tooltip" data-placement="bottom" title="A group of bullied kids band together when a shapeshifting demon, taking the appearance of a clown, begins hunting children.">
     <h2>Hunger Games</h2>
 </div>
 
