fix sidebar click event, add wiki articles to infowindow

--- a/Project 5/index.html
+++ b/Project 5/index.html
@@ -35,12 +35,12 @@
                     <input class="form-control" id="places-search" type="text" placeholder="Location">
                 </div>
                 <div class="col-3">
-                    <button class="btn btn-warning" id="go-places">Filter</button>
+                    <button class="btn btn-warning" id="go-places">Search</button>
                 </div>
             </form>
             <div class="row">
                 <div class="col">
-                    <ul class="sidebar-nav">
+                    <ul id="sidebar-list" class="sidebar-nav">
                     </ul>
                 </div>
             </div>
