fix text input size

--- a/Project 5/index.html
+++ b/Project 5/index.html
@@ -30,13 +30,14 @@
                     <button id="toggle-markers" type="button" class="btn btn-primary btn-block">Hide Markers</button>
                 </div>
             </div>
-            <form class="row mt-2 form-group">
-                <div class="col-7">
+            <form class="row mt-2">
+                <div class="col-12">
                     <input class="form-control" id="places-search" type="text" placeholder="Location">
                 </div>
-                <div class="col-3">
+                <div class="col-3 offset-7">
                     <button class="btn btn-warning" id="go-places">Search</button>
                 </div>
+
             </form>
             <div class="row">
                 <div class="col">
