--- a/Project 5/index.html
+++ b/Project 5/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Stickout Map</title>
@@ -37,28 +39,34 @@
                 <div class="col-3 offset-7">
                     <button class="btn btn-warning" id="go-places">Search</button>
                 </div>
-
+            </form>
+            <form class="row mt-2">
+                <div class="col-12">
+                    <input class="form-control" id="places-filter" data-bind="textInput: userInput, event: {keyup: filterMarkers}" type="text" placeholder="Saved Places">
+                </div>
+                <div class="col-3 offset-7">
+                    <button class="btn btn-warning" id="go-filter">Filter</button>
+                </div>
             </form>
             <div class="row">
                 <div class="col">
-                    <ul id="sidebar-list" class="sidebar-nav">
+                    <ul id="sidebar-list" data-bind="foreach: visible" class="sidebar-nav">
+                        <li><a href="#" data-bind="text: $data.title, click: $parent.showInfoWindow"></a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 
-    <div id="map" class="container-fluid"></div>
+    <div id="map"></div>
 
-    <script async defer
-            type="text/javascript"
-            src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyC2XgdAfETefPnU5Kc9mC5pjiA3tP_fhXU&callback=initMap">
-    </script>
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/knockout-3.4.2.js"></script>
-    <script type="text/javascript" src="js/popper.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/knockout-3.4.2.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyC2XgdAfETefPnU5Kc9mC5pjiA3tP_fhXU&callback=initMap" onerror="googleError()"></script>
+    <script src="js/app.js"></script>
 
 </body>
 </html>
