--- a/Project 5/index.html
+++ b/Project 5/index.html
@@ -29,12 +29,12 @@
         <div id="sidebar-wrapper" class="container-fluid bg-dark">
             <div class="row mt-3">
                 <div class="col options-box">
-                    <button id="toggle-markers" type="button" class="btn btn-primary btn-block">Hide Markers</button>
+                    <button id="toggle-markers" type="button" class="btn btn-primary btn-block" data-bind="text: buttonText, click: toggleShowMarker">Hide Markers</button>
                 </div>
             </div>
             <form class="row mt-2">
                 <div class="col-12">
-                    <input class="form-control" id="places-search" type="text" placeholder="Location">
+                    <input class="form-control" id="places-search" data-bind="texInput: findInput" type="text" placeholder="Location">
                 </div>
                 <div class="col-3 offset-7">
                     <button class="btn btn-warning" id="go-places">Search</button>
@@ -65,8 +65,8 @@
     <script src="js/knockout-3.4.2.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyC2XgdAfETefPnU5Kc9mC5pjiA3tP_fhXU&callback=initMap" onerror="googleError()"></script>
     <script src="js/app.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyC2XgdAfETefPnU5Kc9mC5pjiA3tP_fhXU&callback=initMap" onerror="googleError()"></script>
 
 </body>
 </html>
